Align "Report this post" with other post options on questions forum (bug 582316)

--- a/media/css/questions.css
+++ b/media/css/questions.css
@@ -630,7 +630,7 @@ form.report input.submit {
     color: #0489B7;
     cursor: pointer;
     font-size: 14px;
-    padding: 0 0 0 20px;
+    padding: 0 0 0 27px;
 }
 
 form.lock input {
